# AIOE

./: .cspell.json  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/hmir-e2e/src/: main.rs
deploy/: Dockerfile.multi  docker-compose.yml
deploy/packaging/hmir-cli/: Cargo.toml
docs/: ARCHITECTURE.md
examples/: langchain_hmir.py  openwebui_docker.yml
hmir-api/: Cargo.toml
hmir-api/src/: index.html  main.rs  ui_css.css  ui_shell.html
hmir-bench/src/: main.rs
hmir-core/: Cargo.toml
hmir-core/benches/: paged_kv.rs
hmir-core/src/: config.rs  lib.rs  recommender.rs
hmir-core/src/adapters/: lora_manager.rs
hmir-core/src/memory/: allocator.rs  mod.rs  prefix_cache.rs  swap.rs
hmir-core/src/orchestrator/: batching.rs  draft_verify.rs  mod.rs  planner.rs  scheduler.rs
hmir-core/src/platform/: fallback_matrix.rs
hmir-dashboard/: Cargo.toml
hmir-dashboard/src/: main.rs
hmir-hardware-prober/: Cargo.toml
hmir-hardware-prober/src/: lib.rs
hmir-sys/: Cargo.toml  build.rs
hmir-sys/src/: ffi_cuda.rs  ffi_llama.rs  ffi_onnx.rs  lib.rs
hmir-sys/src/backends/: error.rs  llama_adapter.rs  mod.rs  onnx_adapter.rs  paged.rs
scratch/: check_braces.ps1  check_quotes.ps1  check_syntax.ps1  debug_quotes.ps1  debug_quotes_fixed.ps1  list_quotes.ps1
scripts/: download_npu_model.py  hmir_npu_service.py  hmir_npu_worker.py  install.ps1  install.sh  migrate-repo-name.sh  test_npu.ps1  uninstall.ps1
(+10 files in other folders)
