[package]
name = "hmir-sys"
version = "0.1.0"
edition = "2021"
description = "Unsafe C-FFI bindings linking HMIR to inference backends"

[dependencies]
libc = "0.2"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
cc = "1.0"
# bindgen = "0.68" # Retained setup for dynamic wrapper generation later

[dev-dependencies]
# We'll use core tests for memory layout checking
